--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next build && next export"
   },
   "dependencies": {
-    "@react-three/drei": "^9.56.26",
-    "@react-three/fiber": "^8.15.13",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "next": "14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^3.2.0",
-    "three": "^0.160.0",
+    "three": "^0.160.1",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
