--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
     "typescript": "^5.4.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
