--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "recharts": "^3.2.0",
     "three": "^0.160.1",
+    "three-mesh-bvh": "^0.8.0",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
